[tool.poetry]
name = "src"
version = "0.1.0"
description = "Monolithic with decoupled services"
authors = ["Antonio Perez"]
license = "Mozilla Public License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
